Mobile Navbar horizontal scroll fix

--- a/app/static/assets/css/styles.css
+++ b/app/static/assets/css/styles.css
@@ -5,6 +5,10 @@
 
 }
 
+html, body {
+    overflow-x: hidden;
+}
+
 
 
 .header {
@@ -128,8 +132,14 @@ nav .fa {
         right: 0;
         text-align: left;
         z-index: 2;
-        transition: .4s;
+        transition: .5s;
         backdrop-filter: blur(10px);
+        right: -200px; 
+    }
+    
+    
+    .navbar.open {
+        right: 0; 
     }
 
     nav .fa {
